# CERT-x465-003

./: .gitignore  Assignments.md  CERT-x465-003_MAIN.ipynb  CLAUDE.md  README.md  pyproject.toml
data/: evo2.csv  evo3.csv  legendary_pokes.csv  pokemon_base_stats_scraped.csv  pokemon_dataset_MASTER.csv
docs/: CERT-x456-003_video.md
docs/plans/: 2026-03-01-pokemon-eda-design.md  2026-03-01-pokemon-eda-implementation.md  pokemon-eda-implementation.md
docs/reports/: assignment-03-eda-report.md  assignment-05a-recommendations-report.md  cluster_data.csv  dashboard.md  full_report.md  recommendations_data.csv
src/: dashboard.py  dataScrapersCleanersExpanders_notebook.ipynb  original_scrape_recreated.ipynb  plotly_colours.ipynb
