[project]
name = "cert-x465-003"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12, <3.13"
dependencies = [
    "anywidget>=0.9.21",
    "cairocffi>=1.7.1",
    "currencyconverter>=0.18.14",
    "igraph>=1.0.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.3",
    "kaggle>=1.8.3",
    "kagglehub>=0.4.2",
    "kaleido>=1.2.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "pandas-stubs~=2.3.3",
    "playwright>=1.58.0",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "pycairo>=1.29.0",
    "scikit-learn>=1.8.0",
    "scipy-stubs~=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
